Closed
Bug 1133294
Opened 11 years ago
Closed 11 years ago
ScriptedIndirectProxyHandler.[[GetOwnProperty]] can return an incomplete descriptor
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
| Tracking | Status | |
|---|---|---|
| firefox39 | --- | fixed |
People
(Reporter: jorendorff, Assigned: jorendorff)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
This is supposed to be impossible according to ES6 draft rev 32 6.1.7.3:
http://people.mozilla.org/~jorendorff/es6-draft.html#sec-invariants-of-the-essential-internal-methods
At some point we should enforce that with an assertion.
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8564679 -
Flags: review?(efaustbmo)
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jorendorff
Status: NEW → ASSIGNED
Comment 2•11 years ago
|
||
Comment on attachment 8564679 [details] [diff] [review]
Object.getOwnPropertyDescriptor(obj, key) should always return either undefined or a complete property descriptor, even if obj is a proxy
Review of attachment 8564679 [details] [diff] [review]:
-----------------------------------------------------------------
Yep.
Attachment #8564679 -
Flags: review?(efaustbmo) → review+
| Assignee | ||
Updated•11 years ago
|
Blocks: es6internalmethods
| Assignee | ||
Comment 3•11 years ago
|
||
| Assignee | ||
Comment 4•11 years ago
|
||
| Assignee | ||
Comment 5•11 years ago
|
||
Comment 6•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox39:
--- → fixed
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in
before you can comment on or make changes to this bug.
Description
•