Bug 1133294 - Object.getOwnPropertyDescriptor(obj, key) must always return either undefined or a complete property descriptor, even if obj is a proxy. r=efaust.

--HG--
extra : rebase_source : 6f68a9607d1a3f8c5a589bd51aa737d601b00e16
extra : amend_source : b4afc4ecede67f806e2b00adfa004ee72e3bfd91