js/src/jsapi.cpp
@@ -2720,14 +2720,15 @@ JS_DefineProperties(JSContext *cx, HandleObject obj, const JSPropertySpec *ps)
 }
 
 JS_PUBLIC_API(bool)
-JS::ParsePropertyDescriptorObject(JSContext *cx,
-                                  HandleObject obj,
-                                  HandleValue descObj,
-                                  MutableHandle<JSPropertyDescriptor> desc)
+JS::ObjectToCompletePropertyDescriptor(JSContext *cx,
+                                       HandleObject obj,
+                                       HandleValue descObj,
+                                       MutableHandle<JSPropertyDescriptor> desc)
 {
     Rooted<PropDesc> d(cx);
     if (!d.initialize(cx, descObj))
         return false;
+    d.complete();
     d.populatePropertyDescriptor(obj, desc);
     return true;
 }
